fix spacing of "interested in"

--- a/css/base.scss
+++ b/css/base.scss
@@ -1548,6 +1548,7 @@ input[type='text'].selectivity-multiple-input {
   max-width: 100%;
   outline: 0;
   padding: 0;
+  padding-left: 6px;
   margin-bottom: 0; }
   .selectivity-multiple-input:focus,
   input[type='text'].selectivity-multiple-input:focus {
